--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
-	      				<div class="explicacion">Proyecto personal que desarrolle basándome en un templates existente. En este proyecto hice uso de todos los conocimientos adquiridos durante la primera unidad (HTML5, CSS3, Bootstrap) de Laboratoria</div>
+	      				<div class="explicacion">Proyecto personal que desarrollé basándome en un templates existente. En este proyecto hice uso de todos los conocimientos adquiridos durante la primera unidad (HTML5, CSS3, Bootstrap) de Laboratoria</div>
 	      				<p class="tituloDescripcion">Herramientas Utilizadas</p>
 	      				<hr>
 	      				<div class="herramientas">
@@ -284,7 +284,7 @@
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
-	      				<div class="explicacion">Unos de los primeros proyectos desarrollados en Laboratoria, el cual consistía en la maquetación de una página web, utilizando HTML5 y CSS3.</div>
+	      				<div class="explicacion">Uno de los primeros desarrollados en Laboratoria, el cual consistía en la maquetación de una página web, utilizando HTML5 y CSS3.</div>
 	      				<p class="tituloDescripcion">Herramientas Utilizadas</p>
 	      				<hr>
 	      				<div class="herramientas">
@@ -364,7 +364,7 @@
 	      				 	<li>Usar AJAX/Jquery/Librería Externa.</li>
 	      				 	<li>Usar una librería cool.</li>
 	      				 </ul>
-	      				 En este proyecto me encargue de implementar el sharing son las redes socilaes, además de el diseño del logotipo.    				
+	      				 En este proyecto me encargué de implementar el sharing son las redes sociales, además de el diseño del logotipo.    				
 	      				</div>
 	      				<p class="tituloDescripcion">Herramientas Utilizadas</p>
 	      				<hr>
