--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
 	      <div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 	        <span aria-hidden="true">&times;</span></button>
-	       	<p class="tituloProyecto">NEW PROJECT</p>
+	       	<p class="tituloProyecto">TWITTER</p>
 	      </div>
 	      <div class="modal-body">
 	      	<div id="contProject" class="container">
@@ -402,7 +402,7 @@
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
-	      				<div class="explicacion">Este Proyecto consitió en realiazar un replica de twitter en el cual se simulaba los post de twitter.</div>
+	      				<div class="explicacion">Este Proyecto consitió en realizar una réplica de twitter en el cual se simulaba los post de twitter.</div>
 	      				<p class="tituloDescripcion">Herramientas Utilizadas</p>
 	      				<hr>
 	      				<div class="herramientas">
