--- a/index.html
+++ b/index.html
@@ -210,7 +210,8 @@
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
-	      				<div class="explicacion">Proyecto desarrollado en Laboratoria, el cual consistía en la maquetación de un LandingPage.<br>Este fue uno de los primeros proyectos en donde implementamos y empezamos a utilizar el framework Bootstrap.</div>
+	      				<div class="explicacion">Proyecto desarrollado en Laboratoria, el cual consistía en la maquetación de un LandingPage. 
+	      				Este fue uno de los primeros proyectos en donde empezamos  a utilizar el framework Bootstrap.Herramientas Utilizadas</div>
 	      				<p class="tituloDescripcion">Herramientas Utilizadas</p>
 	      				<hr>
 	      				<div class="herramientas">
@@ -357,11 +358,11 @@
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
-	      				<div class="explicacion">Trabajo grupal que consistió en realizar un proyecto que tuviera los siguientes requisitos:
+	      				<div class="explicacion">Trabajo grupal que consistió en realizar un proyecto que tuviera los siguientes requisitos:    				 
 	      				<ul>
 	      				 	<li>El contexto del proyecto deber ser música / video.</li>
 	      				 	<li>Implementar el sharing de redes sociales.</li>
-	      				 	<li>Usar AJAX/Jquery/Librería Externa.</li>
+	      				 	<li>Usar AJAX/Jquery/Librería Externa. </li>
 	      				 	<li>Usar una librería cool.</li>
 	      				 </ul>
 	      				 En este proyecto me encargué de implementar el sharing son las redes sociales, además de el diseño del logotipo.    				
@@ -402,7 +403,7 @@
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
-	      				<div class="explicacion">Este Proyecto consitió en realizar una réplica de twitter en el cual se simulaba los post de twitter.</div>
+	      				<div class="explicacion">Este Proyecto consistió en realizar un replica de Twitter en el cual se simulaba los post de Twitter.</div>
 	      				<p class="tituloDescripcion">Herramientas Utilizadas</p>
 	      				<hr>
 	      				<div class="herramientas">
