--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Evelyn Farfan</title>
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/hover.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/ionicons.css">
 	<link rel="stylesheet" href="css/font-awesome.css">
@@ -74,7 +75,10 @@
 						<p class="quince"> Mi nombre es Evelyn Farfan, soy Front-end Developer Jr, estudiante de Laboratoria, además de Diseñadora Gráfica.
 						<br>
 						<br>
-						Me considero una persona con muchas ganas de aprender y enriquecer mis conocimientos teóricos, prácticos para poder aplicarlos en cualquier área de mi especialidad, además de continuar preparándome para desarrollar y mantener actualizado mi campo profesional.</p>
+						Me considero una persona con muchas ganas de aprender y enriquecer mis conocimientos teóricos - prácticos para poder aplicarlos en cualquier área de mi especialidad.
+						<br>
+						<br> 
+						Además de continuar preparándome para desarrollar y mantener actualizado mi campo profesional.</p>
 						<br>
 						<button id="botones" type="button" class="btn btn-info"><i class="glyphicon glyphicon-download-alt"></i><a class="enlaceCv" href="pdf/cv-evelyn-farfan.pdf" download="cv-evelyn-farfan">
 						Descarga mi cv</a></button>
@@ -95,7 +99,7 @@
 						<div class="skillbar-title" style="background: #4ca3a5;"><span>HTML5</span></div>
 						<div class="skillbar-bar" style="background: #4ca3a5;"></div>
 						<div class="skill-bar-percent">70%</div>
-						</div> <!-- End Skill Bar -->
+					   </div> <!-- End Skill Bar -->
 					<div class="skillbar clearfix " data-percent="70%">
 						<div class="skillbar-title" style="background: #4ca3a5;"><span>CSS3</span></div>
 						<div class="skillbar-bar" style="background: #4ca3a5;"></div>
@@ -145,37 +149,112 @@
 
 	<section id="seccion3" class="bloqueDos ">
 		<div class="container">
-			<div id="cont-sub" class="row">
-				<div class="contTituloColor">
-					<p class="sub text-center">PROYECTOS</p>
-				</div>
-			</div>
-			<div class="row">
-				<div id="c-p" class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-					<a data-toggle="modal" href="#modal-tres"><img class="imgProyecto center-block img-responsive" src="img/portafolio3.jpg" alt="portafolio-tres"><div class="colorHover"></div></a>
-					
-				</div>
-				<div id="c-p" class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-					<a data-toggle="modal" href="#modal-uno"><img class="imgProyecto center-block img-responsive" src="img/portafolio1.jpg" alt="portafolio-uno"></a>
-					<div class="colorHover">
-			
-					</div>
-				</div>
-				<div id="c-p" class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-					<a data-toggle="modal" href="#modal-dos"><img class="imgProyecto center-block img-responsive" src="img/portafolio2.jpg" alt="portafolio-dos"></a>
-				</div>
-			</div>
-			<div class="row">
-				<div id="c-p" class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-					<a data-toggle="modal" href="#modal-cuatro"><img class="imgProyecto center-block img-responsive" src="img/portafolio4.jpg" alt="portafolio-cuatro"></a>
-				</div>
-				<div id="c-p" class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-					<a data-toggle="modal" href="#modal-cinco"><img class="imgProyecto center-block img-responsive" src="img/portafolio5.jpg" alt="portafolio-cinco"></a>
-				</div>
-				<div id="c-p" class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-					<a data-toggle="modal" href="#modal-seis"><img class="imgProyecto center-block img-responsive" src="img/portafolio6.jpg" alt="portafolio-seis"></a>
-				</div>
-			</div>
+		  <div class="row">
+		    <div class="col-sm-4">
+		      <div class="item-cont">
+		        <a data-toggle="modal" href="#modal-tres" class="enlace-proyecto" href="http://www.minimalcoding.net">
+		          <figure>
+		          <img src="img/portafolio3.jpg" />
+		          </figure>
+		          <div class="item-content">
+		            <div class="align-content">
+		              <div class="text-cont">
+		                <i class="fa fa-code"></i>
+		                <p>ECOMUNIDAD</p>
+		              </div>
+		            </div>
+		          </div>
+		        </a>
+		      </div>
+		    </div>
+		    <div class="col-sm-4">
+		      <div class="item-cont">
+		        <a data-toggle="modal" href="#modal-uno" class="enlace-proyecto" href="http://www.minimalcoding.net">
+		          <figure>
+		          <img src="img/portafolio1.jpg"/>
+		          </figure>
+		          <div class="item-content">
+		            <div class="align-content">
+		              <div class="text-cont">
+		                <i class="fa fa-code"></i>
+		                <p>MI PORTAFOLIO</p>
+		              </div>
+		            </div>
+		          </div>
+		        </a>
+		      </div>
+		    </div>
+		    <div class="col-sm-4">
+		      <div class="item-cont">
+		        <a data-toggle="modal" href="#modal-dos" class="enlace-proyecto" href="http://www.minimalcoding.net">
+		          <figure>
+		          <img src="img/portafolio2.jpg" />
+		          </figure>
+		          <div class="item-content">
+		            <div class="align-content">
+		              <div class="text-cont">
+		                <i class="fa fa-code"></i>
+		                <p>GRAXPO</p>
+		              </div>
+		            </div>
+		          </div>
+		        </a>
+		      </div>
+		    </div>
+		  </div>
+		  <div class="row">
+		    <div class="col-sm-4">
+		      <div class="item-cont">
+		        <a data-toggle="modal" href="#modal-cuatro" class="enlace-proyecto" href="http://www.minimalcoding.net">
+		          <figure>
+		          <img src="img/portafolio4.jpg" />
+		          </figure>
+		          <div class="item-content">
+		            <div class="align-content">
+		              <div class="text-cont">
+		                <i class="fa fa-code"></i>
+		                <p>TRELLO</p>
+		              </div>
+		            </div>
+		          </div>
+		        </a>
+		      </div>
+		    </div>
+		    <div class="col-sm-4">
+		      <div class="item-cont">
+		        <a data-toggle="modal" href="#modal-cinco" class="enlace-proyecto" href="http://www.minimalcoding.net">
+		          <figure>
+		          <img src="img/portafolio5.jpg"/>
+		          </figure>
+		          <div class="item-content">
+		            <div class="align-content">
+		              <div class="text-cont">
+		                <i class="fa fa-code"></i>
+		                <p>SOUNDROCK</p>
+		              </div>
+		            </div>
+		          </div>
+		        </a>
+		      </div>
+		    </div>
+		    <div class="col-sm-4">
+		      <div class="item-cont">
+		        <a data-toggle="modal" href="#modal-seis" class="enlace-proyecto" href="http://www.minimalcoding.net">
+		          <figure>
+		          <img src="img/portafolio6.jpg" />
+		          </figure>
+		          <div class="item-content">
+		            <div class="align-content">
+		              <div class="text-cont">
+		                <i class="fa fa-code"></i>
+		                <p>TWITTER</p>
+		              </div>
+		            </div>
+		          </div>
+		        </a>
+		      </div>
+		    </div>
+		  </div>
 		</div>
 	</section>
 
@@ -191,6 +270,10 @@
 				<p>Copyright © Evelyn Farfan 2016</p>
 			</div>
 		</div>
+	</footer>
+
+	<footer class="footer2">
+		<p>Copyright © Evelyn Farfan 2016</p>
 	</footer>
 
 	<div class="modal fade" id="modal-uno" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
