--- a/index.html
+++ b/index.html
@@ -267,13 +267,12 @@
 			</div>
 			<div class="text-center row">
 				<p>e.farfanvaldivia@gmail.com</p>
-				<p>Copyright © Evelyn Farfan 2016</p>
 			</div>
 		</div>
 	</footer>
 
 	<footer class="footer2">
-		<p>Copyright © Evelyn Farfan 2016</p>
+		<p class="copyright">Copyright © Evelyn Farfan 2016</p>
 	</footer>
 
 	<div class="modal fade" id="modal-uno" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
