subiendo cambios css

--- a/index.html
+++ b/index.html
@@ -258,21 +258,23 @@
 		</div>
 	</section>
 
-	<footer  class="footer">
+	<footer  id="seccion4" class="footer">
 		<div class="container">
+			<div class="row">
+				<div class="contTitulogray">
+				<p class="sub3 text-center">CONTACTO</p>
+			</div>
+			</div>
 			<div class="text-center row">
 				<a class="iconRedes" href="#"><i class="iconRedes fa fa-linkedin-square"></i></a>
 				<a class="iconRedes" href="https://github.com/efarfan2393"><i class="iconRedes fa fa-github"></i></a>
 				<a class="iconRedes" href="https://www.behance.net/evelyn_farfan"><i class="iconRedes fa fa-behance-square"></i></a>
 			</div>
 			<div class="text-center row">
-				<p>e.farfanvaldivia@gmail.com</p>
+				<p class="email-footer">e.farfanvaldivia@gmail.com</p>
+				<p class="copyright">Copyright © Evelyn Farfan 2016</p>
 			</div>
 		</div>
-	</footer>
-
-	<footer class="footer2">
-		<p class="copyright">Copyright © Evelyn Farfan 2016</p>
 	</footer>
 
 	<div class="modal fade" id="modal-uno" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
