--- a/index.html
+++ b/index.html
@@ -149,6 +149,11 @@
 
 	<section id="seccion3" class="bloqueDos ">
 		<div class="container">
+		    <div class="row">
+		    	<div class="contTituloColor">
+				    <p class="sub text-center">PORTAFOLIO</p>
+				</div>
+		    </div>
 		  <div class="row">
 		    <div class="col-sm-4">
 		      <div class="item-cont">
@@ -266,13 +271,13 @@
 			</div>
 			</div>
 			<div class="text-center row">
-				<a class="iconRedes" href="#"><i class="iconRedes fa fa-linkedin-square"></i></a>
-				<a class="iconRedes" href="https://github.com/efarfan2393"><i class="iconRedes fa fa-github"></i></a>
+				<a class="iconRedes" href="https://www.linkedin.com/in/evelyn-farfan"><i class="iconRedes fa fa-linkedin-square"></i></a>
+				<a class="iconRedes" href="https://github.com/EvelynFarfan"><i class="iconRedes fa fa-github"></i></a>
 				<a class="iconRedes" href="https://www.behance.net/evelyn_farfan"><i class="iconRedes fa fa-behance-square"></i></a>
 			</div>
 			<div class="text-center row">
 				<p class="email-footer">e.farfanvaldivia@gmail.com</p>
-				<p class="copyright">Copyright © Evelyn Farfan 2016</p>
+				<p class="copyright">Copyright © Evelyn Farfan 2017</p>
 			</div>
 		</div>
 	</footer>
@@ -304,8 +309,8 @@
 									<span class="iconHerramienta bootstrap">B</span>
 	      				</div>
 	      				<div class="linkProjects">
-	      					<a id="botones" href="https://github.com/efarfan2393/portafolio" target="_blank">GitHub</a>
-	      					<a id="botones" href="https://efarfan2393.github.io/portafolio/" target="_blank">Ver Página</a>
+	      					<a id="botones" href="https://github.com/EvelynFarfan/portafolio" target="_blank">GitHub</a>
+	      					<a id="botones" href="https://EvelynFarfan.github.io/portafolio/" target="_blank">Ver Página</a>
 	      				</div>
 	      			</div>
 	      		</div>
@@ -341,8 +346,8 @@
 									<span class="iconHerramienta bootstrap">B</span>
 	      				</div>
 	      				<div class="linkProjects">
-	      					<a id="botones" href="https://github.com/efarfan2393/graxpo" target="_blank">GitHub</a>
-	      					<a id="botones" href="https://efarfan2393.github.io/graxpo/" target="_blank">Ver Página</a>
+	      					<a id="botones" href="https://github.com/EvelynFarfan/graxpo" target="_blank">GitHub</a>
+	      					<a id="botones" href="https://EvelynFarfan.github.io/graxpo/" target="_blank">Ver Página</a>
 	      				</div>
 	      			</div>
 	      		</div>
@@ -377,8 +382,8 @@
 	      					<i class="iconHerramienta css ion-social-css3-outline"></i>
 	      				</div>
 	      				<div class="linkProjects">
-	      					<a id="botones" href="https://github.com/efarfan2393/ecomunidad-sostenible" target="_blank">GitHub</a>
-	      					<a id="botones" href="https://efarfan2393.github.io/ecomunidad-sostenible/" target="_blank">Ver Página</a>
+	      					<a id="botones" href="https://github.com/EvelynFarfan/ecomunidad-sostenible" target="_blank">GitHub</a>
+	      					<a id="botones" href="https://EvelynFarfan.github.io/ecomunidad-sostenible/" target="_blank">Ver Página</a>
 	      				</div>
 	      			</div>
 	      		</div>
@@ -414,8 +419,8 @@
 									<i class="iconHerramienta js ion-social-javascript"></i>
 	      				</div>
 	      				<div class="linkProjects">
-	      					<a id="botones" href="https://github.com/efarfan2393/trello" target="_blank">GitHub</a>
-	      					<a id="botones" href="https://efarfan2393.github.io/trello/" target="_blank">Ver Página</a>
+	      					<a id="botones" href="https://github.com/EvelynFarfan/trello" target="_blank">GitHub</a>
+	      					<a id="botones" href="https://EvelynFarfan.github.io/trello/" target="_blank">Ver Página</a>
 	      				</div>
 	      			</div>
 	      		</div>
@@ -459,8 +464,8 @@
 									<i class="iconHerramienta js ion-social-javascript"></i>
 	      				</div>
 	      				<div class="linkProjects">
-	      					<a id="botones" href="https://github.com/efarfan2393/soundrock" target="_blank">GitHub</a>
-	      					<a id="botones" href="https://efarfan2393.github.io/soundrock/" target="_blank">Ver Página</a>
+	      					<a id="botones" href="https://github.com/EvelynFarfan/soundrock" target="_blank">GitHub</a>
+	      					<a id="botones" href="https://EvelynFarfan.github.io/soundrock/" target="_blank">Ver Página</a>
 	      				</div>
 	      			</div>
 	      		</div>
@@ -496,8 +501,8 @@
 									<i class="iconHerramienta js ion-social-javascript"></i>
 	      				</div>
 	      				<div class="linkProjects">
-	      					<a id="botones" href="https://github.com/efarfan2393/twitter" target="_blank">GitHub</a>
-	      					<a id="botones" href="https://efarfan2393.github.io/twitter/" target="_blank">Ver Página</a>
+	      					<a id="botones" href="https://github.com/EvelynFarfan/twitter" target="_blank">GitHub</a>
+	      					<a id="botones" href="https://EvelynFarfan.github.io/twitter/" target="_blank">Ver Página</a>
 	      				</div>
 	      			</div>
 	      		</div>
