--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<title>Evelyn Farfan - Portafolio</title>
+	<title>Evelyn Farfan</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/hover.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
@@ -15,7 +15,7 @@
 </head>
 <body data-spy="scroll" data-target="#bs-example-navbar-collapse-1" data-offset="50">
 
-	<header>
+	<header>	
 		<div>
 			<nav id="menu" class="navbar navbar-default navbar-fixed-top" role="navigation">
 				  <div class="container">
@@ -77,7 +77,7 @@
 						<br>
 						Me considero una persona con muchas ganas de aprender y enriquecer mis conocimientos teóricos - prácticos para poder aplicarlos en cualquier área de mi especialidad.
 						<br>
-						<br>
+						<br> 
 						Además de continuar preparándome para desarrollar y mantener actualizado mi campo profesional.</p>
 						<br>
 						<button id="botones" type="button" class="btn btn-info"><i class="glyphicon glyphicon-download-alt"></i><a class="enlaceCv" href="pdf/cv-evelyn-farfan.pdf" download="cv-evelyn-farfan">
@@ -299,7 +299,7 @@
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
-	      				<div class="explicacion">Proyecto desarrollado en Laboratoria, el cual consistía en la maquetación de un LandingPage.
+	      				<div class="explicacion">Proyecto desarrollado en Laboratoria, el cual consistía en la maquetación de un LandingPage. 
 	      				Este fue uno de los primeros proyectos en donde empezamos  a utilizar el framework Bootstrap.Herramientas Utilizadas</div>
 	      				<p class="tituloDescripcion">Herramientas Utilizadas</p>
 	      				<hr>
@@ -447,14 +447,14 @@
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
-	      				<div class="explicacion">Trabajo grupal que consistió en realizar un proyecto que tuviera los siguientes requisitos:
+	      				<div class="explicacion">Trabajo grupal que consistió en realizar un proyecto que tuviera los siguientes requisitos:    				 
 	      				<ul>
 	      				 	<li>El contexto del proyecto deber ser música / video.</li>
 	      				 	<li>Implementar el sharing de redes sociales.</li>
 	      				 	<li>Usar AJAX/Jquery/Librería Externa. </li>
 	      				 	<li>Usar una librería cool.</li>
 	      				 </ul>
-	      				 En este proyecto me encargué de implementar el sharing son las redes sociales, además de el diseño del logotipo.
+	      				 En este proyecto me encargué de implementar el sharing son las redes sociales, además de el diseño del logotipo.    				
 	      				</div>
 	      				<p class="tituloDescripcion">Herramientas Utilizadas</p>
 	      				<hr>
